# imgopt

./: .gitignore  Cargo.toml  Dockerfile  config-sample.toml  readme.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: main.yml
docker/: Dockerfile
docker/os_info-1.3.3/: .cargo_vcs_info.json  Cargo.toml
docker/os_info-1.3.3/src/linux/: file_release.rs
k8s/app/: config.yaml  deployment.yaml  service.yaml
k8s/argocd/: argo-app.yaml  argo-proj.yaml
scripts/: auto-start.sh  cloud-init.sh  entrypoint.sh  mp4-to-gif.sh  provisioning.sh
src/: config.rs  img.rs  main.rs  mod.rs  object.rs  routes.rs  source.rs  tw.rs  utils.rs
src/routes/: admin.rs  mod.rs  public.rs
