[package]
edition = "2021"
name = "imgopt"
authors = ["mpw <mariano@holaplex.com>"]
version = "0.1.8"

[dependencies]
actix-web = "4.0.1"
awc = { version = "3.0.0-beta.21", features = [ "rustls" ] }
env_logger = "0.9"
image = "0.24.1"
gif = "0.11.3"
log = "0.4"
mime = "0.3"
rustls = "0.20"
serde = "1.0.105"
serde_derive = "1.0"
serde_json = "1.0.48"
webpki-roots = "0.22"
anyhow = "1.0"
cmd_lib = "1.3.0"
confy = "0.4.0"
usvg = "0.22.0"
tiny-skia = "0.6.1"
resvg = "0.22"
resize = "0.7.2"
png = "0.16.7"
rgb = "0.8.24"
