[package]
edition = "2021"
name = "imgopt"
authors = ["mpw <mariano@holaplex.com>"]
version = "0.2.1"

[dependencies]
actix-web = "4.2.1"
actix-cors = "0.6.4"
awc = { version = "3.0.1", features = [ "rustls" ] }
env_logger = "0.9.3"
image = { version = "0.24.5", features = ["webp-encoder"]}
gif = "0.12.0"
mp4 = "0.12.0"
log = "0.4.17"
mime = "0.3.16"
rustls = "0.20.7"
serde = "1.0.148"
url = "2.3.1"
serde_derive = "1.0"
serde_json = "1.0.89"
webpki-roots = "0.22.5"
anyhow = "1.0"
cmd_lib = "1.3.0"
confy = "0.4.0"
usvg = "0.22.0"
tiny-skia = "0.6.6"
resvg = "0.22"
resize = "0.7.4"
png = "0.16.8"
rgb = "0.8.34"
sha1_smol = "1.0.0"
derivative = "2.2.0"
webp = { version = "0.2.2", git="https://github.com/jaredforth/webp" }
webp-animation = { version = "0.7.0", features = ["image"]}
gifski = "1.8.0"
walkdir = "2.3.2"
tempfile = "3.3.0"
